k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicio-devops
  namespace: local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservicio-devops
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microservicio-devops
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: "o\t2f5ae96c-b558-4c7b-a590-a501ae1c3f6c"
            - name: PORT
              value: '3000'
          image: ricardorangles/microservicio-devops:latest
          imagePullPolicy: IfNotPresent
          name: microservicio-devops
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
